--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                     </li>
                 </ul>
                 <button class="btn btn-outline-light d-lg-flex" id="btnLogin" onclick="abrirModalLogin()">
-
                     <i class="bi bi-key"></i> Modo Edição
                 </button>
             </div>
@@ -88,7 +87,7 @@
                     <div id="trabalhos-lista">
                         <!-- Trabalhos serão adicionados dinamicamente -->
                     </div>
-                    <button class="btn btn-primary mt-3" onclick="adicionarTrabalho()">
+                    <button class="btn btn-primary mt-3 modo-edicao" onclick="adicionarTrabalho()">
                         <i class="bi bi-plus-circle"></i> Adicionar Trabalho
                     </button>
                 </div>
@@ -102,7 +101,7 @@
                     <div id="datas-lista">
                         <!-- Datas serão adicionadas dinamicamente -->
                     </div>
-                    <button class="btn btn-primary mt-3" onclick="adicionarData()">
+                    <button class="btn btn-primary mt-3 modo-edicao" onclick="adicionarData()">
                         <i class="bi bi-plus-circle"></i> Adicionar Data
                     </button>
                 </div>
@@ -116,7 +115,7 @@
                     <div id="apps-lista">
                         <!-- Apps serão adicionados dinamicamente -->
                     </div>
-                    <button class="btn btn-primary mt-3" onclick="adicionarApp()">
+                    <button class="btn btn-primary mt-3 modo-edicao" onclick="adicionarApp()">
                         <i class="bi bi-plus-circle"></i> Adicionar App
                     </button>
                 </div>
@@ -130,7 +129,7 @@
                     <div id="guias-lista">
                         <!-- Guias serão adicionados dinamicamente -->
                     </div>
-                    <button class="btn btn-primary mt-3" onclick="adicionarGuia()">
+                    <button class="btn btn-primary mt-3 modo-edicao" onclick="adicionarGuia()">
                         <i class="bi bi-plus-circle"></i> Adicionar Guia
                     </button>
                 </div>
@@ -144,7 +143,7 @@
                     <div id="planilhas-lista">
                         <!-- Planilhas serão adicionadas dinamicamente -->
                     </div>
-                    <button class="btn btn-primary mt-3" onclick="adicionarPlanilha()">
+                    <button class="btn btn-primary mt-3 modo-edicao" onclick="adicionarPlanilha()">
                         <i class="bi bi-plus-circle"></i> Adicionar Planilha
                     </button>
                 </div>
@@ -158,7 +157,7 @@
                     <div id="avisos-lista">
                         <!-- Avisos serão adicionados dinamicamente -->
                     </div>
-                    <button class="btn btn-primary mt-3" onclick="adicionarAviso()">
+                    <button class="btn btn-primary mt-3 modo-edicao" onclick="adicionarAviso()">
                         <i class="bi bi-plus-circle"></i> Adicionar Aviso
                     </button>
                 </div>
