--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </section>
 
         <section id="respostas" class="mb-5">
-            <h2><i class="bi bi-check-circle"></i> Respostas do TarefasSP</h2>
+            <h2><i class="bi bi-check-circle"></i> Duvidas do TarefasSP</h2>
             <div class="card">
                 <div class="card-body">
                     <div id="respostas-lista">
