--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div id="respostas-lista">
                     </div>
                     <button class="btn btn-primary mt-3" onclick="adicionarResposta()">
-                        <i class="bi bi-plus-circle"></i> Adicionar Resposta
+                        <i class="bi bi-plus-circle"></i> Adicionar Pergunta
                     </button>
                 </div>
             </div>
