--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
         </section>
 
         <section id="respostas" class="mb-5">
-            <h2><i class="bi bi-check-circle"></i> Duvidas do TarefasSP</h2>
+            <h2><i class="bi bi-check-circle"></i> Dúvidas do TarefasSP</h2>
             <div class="card">
                 <div class="card-body">
                     <div id="respostas-lista">
                     </div>
-                    <button class="btn btn-primary mt-3" onclick="adicionarResposta()">
-                        <i class="bi bi-plus-circle"></i> Adicionar Pergunta
+                    <button class="btn btn-primary mt-3" onclick="PerguntarTarefas()">
+                        <i class="bi bi-plus-circle"></i> Fazer Pergunta
                     </button>
                 </div>
             </div>
@@ -262,7 +262,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" id="botaoSalvar" onclick="salvarItem()">Salvar</button>
+                    <button type="button" class="btn btn-primary" id="botaoSalvar">Salvar</button>
                 </div>
             </div>
         </div>
