--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal da Sala</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <div class="container">
             <a class="navbar-brand" href="#">PORTAL DA SALA</a>
             <button class="btn btn-outline-light d-lg-none me-2" id="botaoRecarregar" onclick="atualizarPagina()">
@@ -214,7 +214,7 @@
                     <button class="btn btn-primary mt-3" onclick="adicionarPergunta()">
                         <i class="bi bi-plus-circle"></i> Fazer Pergunta
                     </button>
-                    <button class="btn btn-secondary mt-3" onclick="inscreverComoMonitor()">
+                    <button class="btn btn-primary mt-3" onclick="inscreverComoMonitor()">
                         <i class="bi bi-person-plus"></i> Inscrever como Monitor
                     </button>
                 </div>
@@ -261,7 +261,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cancelar</button>
                     <button type="button" class="btn btn-primary" id="botaoSalvar">Salvar</button>
                 </div>
             </div>
