--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portal da Sala</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcrypt.js/5.0.1/bcrypt.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,6 +24,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
+                    <input type="text" id="searchInput" placeholder="Buscar..." oninput="filtrarLista()">
                     <li class="nav-item">
                         <a class="nav-link" href="#avisos">Avisos</a>
                     </li>
